[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/levelSelector.png" type="Texture" id=1]
[ext_resource path="res://scripts/WorldPanelObject.gd" type="Script" id=2]
[ext_resource path="res://fonts/m3x6.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=4]
[ext_resource path="res://sprites/ui.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 108, 63, 54 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 54, 63, 54 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 162, 63, 54 )

[node name="WorldPanelObject" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = SubResource( 1 )
texture_hover = SubResource( 2 )
texture_disabled = SubResource( 3 )

[node name="Heroes" type="Node2D" parent="."]
position = Vector2( 28.5, 44 )

[node name="Monsters" type="Node2D" parent="."]
position = Vector2( 10, 10 )

[node name="Label" type="Label" parent="."]
margin_left = 30.0
margin_top = -3.0
margin_right = 34.0
margin_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "X"
align = 1
valign = 1

[node name="Cup" type="Sprite" parent="."]
visible = false
position = Vector2( 2, 1 )
texture = ExtResource( 5 )
centered = false
hframes = 6
vframes = 16
frame = 57

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
